Feature Policy image-compression policy use image data size as resource legnth

The policy was flaky with cached image since the for cached images the
encodedbody and decodedbody will be 0. Instead, we should use image
data size to fix the problem.

Bug: 874576
Change-Id: I8776e202d325353c9bf58b6a46c6b3fe0ee94eed
Reviewed-on: https://chromium-review.googlesource.com/c/1298236
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Luna Lu <loonybear@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602706}
Former-commit-id: 931192325d10e124470b235abac1d98f7ffd4a64